Adição de target para criação de jlink