@@ -174,6 +174,22 @@
         </jar>
     </target>
 
+    <target name="jlink" depends="compile">
+        <delete dir="${dist}/artifacts/shop-app"/>
+        <mkdir dir="${dist}/artifacts"/>
+
+        <exec executable="${java.home}\bin\jlink">
+            <arg value="--output"/>
+            <arg value="dist/artifacts/shop-app"/>
+            <arg value="--add-modules"/>
+            <arg value="labs.pm"/>
+            <arg value="--module-path"/>
+            <arg value="build"/>
+            <arg value="--launcher"/>
+            <arg value="shop=labs.pm/com.javase11.certification.productmanagement.modules.client.Shop"/>
+        </exec>
+    </target>
+
     <target name="clean"
             description="clean up">
         <!-- Delete the ${build} and ${dist} directory trees -->
